--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 REACT_APP_BLOCKAPI=Jg7gGpZ7E0qjtJ2
 REACT_APP_BLOCKAPISECRECT=Pr9iSo0eIoProXA
 REACT_APP_APITRANSFER=https://api.blockchainapi.com/v1/solana/wallet/transfer
+
+REACT_APP_TOKEN=RotMAyKDv5g1UMaUzJjBriSBqzVb3eQHopc6DjW7XTp
+REACT_APP_BILLETERA=7YTQM5ZvkeTjHggB5R94EwsPqzctoDEK9xHKEd7CmU5n
