casi terminado trabajo

--- a/.env
+++ b/.env
@@ -4,3 +4,9 @@ REACT_APP_APITRANSFER=https://api.blockchainapi.com/v1/solana/wallet/transfer
 
 REACT_APP_TOKEN=RotMAyKDv5g1UMaUzJjBriSBqzVb3eQHopc6DjW7XTp
 REACT_APP_BILLETERA=7YTQM5ZvkeTjHggB5R94EwsPqzctoDEK9xHKEd7CmU5n
+
+
+REACT_APP_CLAVEWEB=91528363!AMO
+
+
+REACT_APP_API_PATH=https://api.rottenville.io/store/register
